Changed the method setxxx(Double d) to setxxx(double d)